[package]
name = "password_dioxus"
version = "0.1.0"
authors = ["8bitTD <8bittd@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.0", features = [] }
sysinfo = "0.37.2"
rand = "0.9.2"
clipboard = "0.5.0"
tao = "0.34.5"
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
image = "0.25.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0.1"
smol = "2.0.2"
async-io = "2.6.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
